samples/_failures_safe/1761218060_d1bb22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26dcffe3.c:178: error: expected ‘;’, ‘,’ or ‘)’ at end of input
